--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
             >Web<span class="header-logo-accent">Studio</span></a
           >
 
-          <button class="menu-toggle js-close-menu">
+          <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
             <svg width="32" height="22">
               <use href="./images/icons.svg#burger-menu"></use>
             </svg>
@@ -592,6 +596,6 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="./js/mobile-menu.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
