--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         |============================
       */ -->
       <section class="hero">
+         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+         
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
@@ -154,27 +155,45 @@
             <li class="work-item">
               <img
                 class="work-img"
-                src="./images/work/rectangle_1.jpg"
+                srcset="
+                  ./images/work/rectangle_1@1x.jpg 1x,
+                  ./images/work/rectangle_1@2x.jpg 2x
+                "
+                src="./images/work/rectangle_1@1x.jpg"
                 alt="rectangle_1"
                 width="360"
+                height="300"
+                loading="lazy"
               />
             </li>
 
             <li class="work-item">
               <img
                 class="work-img"
-                src="./images/work/rectangle_2.jpg"
+                srcset="
+                  ./images/work/rectangle_2@1x.jpg 1x,
+                  ./images/work/rectangle_2@2x.jpg 2x
+                "
+                src="./images/work/rectangle_2@1x.jpg"
                 alt="rectangle_2"
                 width="360"
+                height="300"
+                loading="lazy"
               />
             </li>
 
             <li class="work-item">
               <img
                 class="work-img"
-                src="./images/work/rectangle_3.jpg"
+                srcset="
+                  ./images/work/rectangle_3@1x.jpg 1x,
+                  ./images/work/rectangle_3@2x.jpg 2x
+                "
+                src="./images/work/rectangle_3@1x.jpg"
                 alt="rectangle_3"
                 width="360"
+                height="300"
+                loading="lazy"
               />
             </li>
           </ul>
@@ -189,9 +208,15 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/team/img_1.jpg"
-                alt="img_1"
+                srcset="
+                  ./images/team/1_img@1x.jpg 1x,
+                  ./images/team/1_img@2x.jpg 2x
+                "
+                src="./images/team/1_img@1x.jpg"
+                alt="Mark Guerrero"
                 width="264"
+                height="260"
+                loading="lazy"
               />
               <div class="team-box">
                 <h3 class="team-title">Mark Guerrero</h3>
@@ -233,9 +258,15 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/team/img_2.jpg"
-                alt="img_2"
+                srcset="
+                  ./images/team/2_img@1x.jpg 1x,
+                  ./images/team/2_img@2x.jpg 2x
+                "
+                src="./images/team/2_img@1x.jpg"
+                alt="Tom Ford"
                 width="264"
+                height="260"
+                loading="lazy"
               />
               <div class="team-box">
                 <h3 class="team-title">Tom Ford</h3>
@@ -277,9 +308,15 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/team/img_3.jpg"
-                alt="img_3"
+                srcset="
+                  ./images/team/3_img@1x.jpg 1x,
+                  ./images/team/3_img@2x.jpg 2x
+                "
+                src="./images/team/3_img@1x.jpg"
+                alt="Camila Garcia"
                 width="264"
+                height="260"
+                loading="lazy"
               />
               <div class="team-box">
                 <h3 class="team-title">Camila Garcia</h3>
@@ -321,9 +358,15 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/team/img_4.jpg"
-                alt="img_4"
+                srcset="
+                  ./images/team/4_img@1x.jpg 1x,
+                  ./images/team/4_img@2x.jpg 2x
+                "
+                src="./images/team/4_img@1x.jpg"
+                alt="Daniel Wilson"
                 width="264"
+                height="260"
+                loading="lazy"
               />
               <div class="team-box">
                 <h3 class="team-title">Daniel Wilson</h3>
@@ -491,8 +534,9 @@
 
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
+       <button type="button" class="modal-close-btn" data-modal-close></button>
       <div class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close>
+       
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
@@ -566,27 +610,14 @@
     <!-- Mobile-menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
-        <!-- <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
-        </svg> -->
-        <svg class="modal-close-icon" width="8" height="8">
+         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#close-icon"></use>
         </svg>
       </button>
 
       <ul class="mobile-menu list">
         <li class="mobile-menu-item">
-          <a class="mobile-link mobile-active" href="./index.html">Studio</a>
+          <a class="mobile-studio-link" href="./index.html">Studio</a>
         </li>
         <li class="mobile-menu-item">
           <a class="mobile-link" href="./portfolio.html">Portfolio</a>
