--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
         |============================
       */ -->
       <section class="hero">
-         <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <div class="container">
-         
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
@@ -534,9 +533,8 @@
 
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
-       <button type="button" class="modal-close-btn" data-modal-close></button>
       <div class="modal">
-       
+        <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
@@ -610,7 +608,7 @@
     <!-- Mobile-menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
-         <svg class="modal-close-icon" width="8" height="8">
+        <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#close-icon"></use>
         </svg>
       </button>
